# Multi-Feature-Face-Detection-cv

./: .gitignore  .vercelignore  README.md  app.py  master_algorithm.md  pyproject.toml  requirements.txt  vercel.json  vercel_error_guide.md  verify_modules.py  web_app.py
api/: index.py
modules/: background_blur.py  cartoonify.py  eye_classification.py  face_blur.py  face_count.py  face_detection.py  filters.py
