[project]
name = "face-processor"
version = "0.1.0"
description = "Multi-Feature Face Processing System using Computer Vision"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "opencv-python",
    "numpy",
    "pillow",
    "streamlit",
]

[project.scripts]
app = "app:main"
face-processor = "main:main"
