[project]
name = "face-processor"
version = "0.1.0"
description = "Multi-Feature Face Processing System using Computer Vision"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "opencv-python-headless",
    "numpy",
    "pillow",
    "flask",
]

[project.scripts]
app = "app:main"
face-processor = "main:main"
